--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,5 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# Build and testing
+# Build
 cmd/wallet/wallet
-cmd/wallet/meson
