--- a/cmd/wallet/wallet.toml
+++ b/cmd/wallet/wallet.toml
@@ -4,29 +4,31 @@ DefaultChainID = 5
 [Chain]
   [Chain.5]
     Ticker = "gor"
-    Endpoint = "https://eth-goerli.alchemyapi.io/v2/jqsuIPSy2H37gIaG8PWyjtvAaZWtMmY2"
+    Endpoint = "https://goerli.infura.io/v3/9aa3d95b3bc440fa88ea12eaa4456161"
+  [Chain.4]
+    Ticker = "rin"
+    Endpoint = "https://rinkeby.infura.io/v3/9aa3d95b3bc440fa88ea12eaa4456161"
+  [Chain.42]
+    Ticker = "kov"
+    Endpoint = "https://kovan.infura.io/v3/9aa3d95b3bc440fa88ea12eaa4456161"
 
 [Meson]
-
   [Meson.Logging]
     Disable = false
     File = "/tmp/meson-wallet/wallet.log"
     Level = "DEBUG"
-
   [Meson.UpstreamProxy]
     Type = "none"
     Network = ""
     Address = ""
     User = ""
     Password = ""
-
   [Meson.Debug]
     DisableDecoyTraffic = false
     SessionDialTimeout = 1200000
     InitialMaxPKIRetrievalDelay = 30
     CaseSensitiveUserIdentifiers = false
     PollingInterval = 100
-
   [Meson.Katzenmint]
     ChainID = "test-chain-QvpdAC"
     PrimaryAddress = "tcp://127.0.0.1:20017"
